// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter button render active button 1`] = `
<View
  style={
    Object {
      "padding": 3,
      "paddingHorizontal": 3,
    }
  }
>
  <Button
    icon={
      Object {
        "name": "attach-money",
      }
    }
    onPress={[MockFunction]}
    styles={
      Object {
        "button": Object {
          "backgroundColor": "#424242",
          "paddingLeft": 10,
        },
        "buttonWrapper": Object {
          "backgroundColor": "#0097a9",
        },
        "icon": Object {
          "backgroundColor": "#616161",
        },
      }
    }
    title="title"
  />
</View>
`;

exports[`Filter button render default button 1`] = `
<View
  style={
    Object {
      "padding": 3,
      "paddingHorizontal": 3,
    }
  }
>
  <Button
    icon={
      Object {
        "name": "attach-money",
      }
    }
    onPress={[MockFunction]}
    styles={
      Object {
        "button": Object {
          "backgroundColor": "#0097a9",
          "paddingLeft": 0,
        },
        "buttonWrapper": Object {
          "backgroundColor": "#0097a9",
        },
        "icon": Object {
          "backgroundColor": "#0097a9",
        },
      }
    }
    title="title"
  />
</View>
`;
